--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,210 +1,271 @@
-
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
+.hero-text {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 1.4;
+    letter-spacing: -0.01em;
+    color: #fff;
+    padding-top: 90px;
+    padding-left: 16px;
+    margin-bottom: 16px;
+    width: 172px;
 }
 
-.container {
-    max-width: 1440px;
-    width: 100%;
-    padding: 0 20px;
-    margin: 0 auto;
-}
-
-
-/* Hero Section */
-.hero {
-    background: var(--color-scheme-1-background);
-    padding-top: 32px;
-    max-width: 100%;
-    margin: 0 auto;
-    background-position: center;
-    background-size: cover;
-}
-
-.hero .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 0px 16px 32px 16px;
-}
-
-.hero-slider.swiper {
-    width: 100%;
-        height: 250px;
-        border-radius: 16px;
-        overflow: hidden;
-        position: relative;
-        margin-bottom: 24px;
-}
-
-.hero-banner-item.swiper-slide {
-    position: relative;
-        width: 100%;
-        height: 100%;
-}
-
-.hero-banner-link {
+.hero-text3 span {
     display: block;
-    width: 100%;
-    height: 100%;
-    text-decoration: none;
-    cursor: pointer;
+    width: 250px;
 }
 
-.hero-banner-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: block;
+.hero-text4 {
+    width: 240px;
 }
 
-.slider-bottom-controls {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 100%;
+.hero-btn {
+    font-size: 8px;
+    color: var(--color-white);
+    border: 0.52px solid var(--color-bamboo);
+    border-radius: 2px;
+    width: 117px;
+    height: 20px;
+    background-color: var(--color-bamboo);
+    margin-left: 16px;
+    margin-bottom: 16px;
+}
+
+.hero-btn:hover,
+.hero-btn:focus {
+    background-color: var(--color-white);
+    color: var(--color-neutral-darkest);
+    border: 1px solid var(--color-neutral-darkest);
+}
+
+.swiper-btn-prev,
+.swiper-btn-next {
+    display: none;
 }
 
 .hero-title {
     font-weight: 600;
-        font-size: 40px;
-        line-height: 1.2;
-        letter-spacing: -0.01em;
-        color: var(--color-scheme-1-text);
-        text-align: left;
-        margin-bottom: 0;
-        flex-grow: 1;
-        white-space: normal;
+    font-size: 40px;
+    line-height: 1.2;
+    letter-spacing: -0.01em;
+    color: var(--color-neutral-darkest);
+    padding-bottom: 32px;
 }
 
-.hero-title .mobile-break {
-    display: block;
- }
-
-.slider-navigation-buttons {
-    display: none;
-    gap: 24px;
-    flex-shrink: 0;
+.swiper-slide {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    max-width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    border-radius: 8px;
+    margin-bottom: 24px;
 }
 
-.slider-button {
-    width: 48px;
-    height: 48px;
-    background-color: var(--color-scheme-3-foreground);
-    border: 1px solid var(--opacity-neutral-darkest-15);
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 0.3s ease, border-color 0.3s ease;
-    flex-shrink: 0;
-    padding: 0;
+.slide1 {
+    background-image: url('/img/hero-img/hero-banner-1-x1-mob.png');
 }
 
-.slider-button svg {
-    fill: var(--color-scheme-1-background);
-    width: 24px;
-    height: 24px;
+.slide2 {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/img/hero-img/hero-banner-2-x1-mob.png');
 }
 
-.slider-button:hover,
-.slider-button:focus {
-    background-color: var(--color-scheme-1-background);
-    border-color: 1px solid var(--opacity-neutral-darkest-15);
+.slide3 {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/img/hero-img/hero-banner-3-x1-mob.png');
 }
 
-.slider-button:hover svg,
-.slider-button:focus svg {
-    fill: var(--color-white);
+.slide4 {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('/img/hero-img/hero-banner-4-x1-mob.png');
 }
 
-.swiper-button-disabled {
-    opacity: 0.4;
-    cursor: not-allowed;
-    border-color: rgba(17, 17, 17, 0.1);
-    background-color: var(--color-scheme-3-foreground);
-}
-
-.swiper-button-disabled svg {
-    fill: #111;
-}
-
-@media screen and (min-width: 768px) and (max-width: 1439px) {
-    .hero .container {
-        padding: 40px 32px 40px 32px;
-        max-width: 100%;
+@media (min-resolution: 2x) {
+    .slide1 {
+        background-image: url('/img/hero-img/hero-banner-1-x2-mob.png');
     }
 
-    .hero-slider.swiper {
-        height: 320px;
-        margin-bottom: 40px;
+    .slide2 {
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/img/hero-img/hero-banner-2-x2-mob.png');
+    }
+
+    .slide3 {
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/img/hero-img/hero-banner-3-x2-mob.png');
+    }
+
+    .slide4 {
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('/img/hero-img/hero-banner-4-x2-mob.png');
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .hero-text {
+        font-size: 32px;
+        line-height: 1.2;
+        padding-top: 118px;
+        padding-left: 40px;
+        width: 290px;
+    }
+
+    .hero-text3 span {
+        width: 350px;
+    }
+
+    .hero-text4 {
+        width: 390px;
+    }
+
+    .hero-btn {
+        font-size: 16px;
+        border: 1px solid var(--color-bamboo);
+        border-radius: 4px;
+        width: 164px;
+        height: 32px;
+        margin-left: 40px;
+        margin-bottom: 32px;
     }
 
     .hero-title {
-        font-size: 40px;
-        text-align: center
+        width: 560px;
     }
 
-        .hero-title .mobile-break {
-            display: none;
+    .swiper-slide {
+        border-radius: 0%;
     }
 
-    .slider-bottom-controls {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .slider-navigation-buttons {
+    .swiper-btn-container {
         display: flex;
+        flex-direction: row;
+        gap: 24px;
     }
 
-    .hero {
-        padding-bottom: 40px;
+    .swiper-btn-prev,
+    .swiper-btn-next {
+        background-color: var(--color-bamboo);
+        width: 48px;
+        height: 48px;
+        border: 1px solid rgba(11, 5, 0, 0.15);
+        display: flex;
+        flex-direction: row;
+        gap: 24px;
+        align-items: center;
+        justify-content: center;
+        position: static;
+        color: var(--color-neutral-darkest);
+    }
+
+    .hero-svg {
+        fill: var(--color-neutral-darkest);
+        align-items: center;
+        width: 24px;
+        height: 24px;
+    }
+
+    .button-dis {
+        opacity: 0.5;
+        pointer-events: none;
+        cursor: default;
+    }
+
+    .slide1 {
+        background-image: url('/img/hero-img/hero-banner-1-x1-lpt.png');
+    }
+
+    .slide2 {
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/img/hero-img/hero-banner-2-x1-lpt.png');
+    }
+
+    .slide3 {
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/img/hero-img/hero-banner-3-x1-lpt.png');
+    }
+
+    .slide4 {
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('/img/hero-img/hero-banner-4-x1-lpt.png');
+    }
+
+    @media (min-resolution: 2x) {
+        .slide1 {
+            background-image: url('/img/hero-img/hero-banner-1-x2-lpt.png');
+        }
+
+        .slide2 {
+            background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/img/hero-img/hero-banner-2-x2-lpt.png');
+        }
+
+        .slide3 {
+            background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/img/hero-img/hero-banner-3-x2-lpt.png');
+        }
+
+        .slide4 {
+            background-image: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('/img/hero-img/hero-banner-4-x2-lpt.png');
+        }
     }
 }
-
 
 @media screen and (min-width: 1440px) {
-    .hero {
-        padding-top: 64px;
-        padding-bottom: 64px;
+    .hero-text {
+        font-size: 52px;
+        padding-top: 155px;
+        padding-left: 56px;
+        margin-bottom: 20px;
+        width: 450px;
     }
 
-    .hero .container {
-        padding: 0 20px;
-        max-width: 1440px;
+    .hero-text3 span {
+        width: 550px;
     }
 
-    .hero-slider.swiper {
-        height: 385px;
-        margin-bottom: 24px;
+    .hero-text4 {
+        width: 650px;
     }
 
-    .slider-bottom-controls {
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        padding-bottom: 0;
+    .hero-btn {
+        border: 1px solid var(--color-bamboo);
+        width: 227px;
+        height: 40px;
+        margin-left: 56px;
+        margin-bottom: 56px;
     }
 
     .hero-title {
-        text-align: left;
-        margin-bottom: 0;
-        margin-right: 20px;
-        font-size: 40px;
+        font-size: 52px;
+        width: 1168px;
     }
 
-    .slider-navigation-buttons {
-        display: flex;
+    .swiper-slide {
+        border-radius: 16px;
     }
-}
+
+    .slide1 {
+        background-image: url('/img/hero-img/hero-banner-1-x1-deskt.png');
+    }
+
+    .slide2 {
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/img/hero-img/hero-banner-2-x1-deskt.png');
+    }
+
+    .slide3 {
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/img/hero-img/hero-banner-3-x1-deskt.png');
+    }
+
+    .slide4 {
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('/img/hero-img/hero-banner-4-x1-deskt.png');
+    }
+
+    @media (min-resolution: 2x) {
+        .slide1 {
+            background-image: url('/img/hero-img/hero-banner-1-x2-deskt.png');
+        }
+
+        .slide2 {
+            background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/img/hero-img/hero-banner-2-x2-deskt.png');
+        }
+
+        .slide3 {
+            background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/img/hero-img/hero-banner-3-x2-deskt.png');
+        }
+
+        .slide4 {
+            background-image: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('/img/hero-img/hero-banner-4-x2-deskt.png');
+        }
+    } }
+    
