--- a/src/partials/contact-modal.html
+++ b/src/partials/contact-modal.html
@@ -1,1 +1,30 @@
-<div class="container"></div>
+<div class="container">
+  <div id="modal" class="modal">
+    <div class="modal-content">
+      <span class="close-btn" id="closeModalBtn">&times;</span>
+      <h2 class="contact-modal-title">Register</h2>
+      <p class="contact-modal-text">Cozy Book Club – “The Midnight Library”</p>
+      <form class="modal-form">
+        <label for="name">Name*</label>
+        <input type="text" id="name" placeholder="Ann" required />
+
+        <label for="email">Email*</label>
+        <input
+          type="email"
+          id="email"
+          placeholder="hello@booksy.com"
+          required
+        />
+
+        <label for="message">Message</label>
+        <textarea
+          class="modal-textarea"
+          id="message"
+          placeholder="Type your message..."
+        ></textarea>
+
+        <button type="submit" class="register-btn">Register</button>
+      </form>
+    </div>
+  </div>
+</div>
