--- a/src/partials/events.html
+++ b/src/partials/events.html
@@ -27,7 +27,7 @@
               Join us for an evening of tea, thoughtful conversation, and shared
               reflections as we dive into Matt Haig’s bestseller.
             </p>
-            <button class="reg-btn">
+            <button class="reg-btn open-modal">
               Register
               <svg class="ev-btn" width="24" height="24">
                 <use href="./img/symbol-defs.svg#icon-chevron-right"></use>
@@ -51,7 +51,7 @@
               Join us for an evening of tea, thoughtful conversation, and shared
               reflections as we dive into Matt Haig’s bestseller.
             </p>
-            <button class="reg-btn">
+            <button class="reg-btn open-modal">
               Register
               <svg class="ev-btn" width="24" height="24">
                 <use href="./img/symbol-defs.svg#icon-chevron-right"></use>
@@ -75,7 +75,7 @@
               Join us for an evening of tea, thoughtful conversation, and shared
               reflections as we dive into Matt Haig’s bestseller.
             </p>
-            <button class="reg-btn">
+            <button class="reg-btn open-modal">
               Register
               <svg class="ev-btn" width="24" height="24">
                 <use href="./img/symbol-defs.svg#icon-chevron-right"></use>
