--- a/src/partials/books.html
+++ b/src/partials/books.html
@@ -1,4 +1,4 @@
-<section class="books">
+<section class="books" id="books">
   <h2>Trending books</h2>
   <div class="container">
     <div class="books-wrapper">
@@ -6,22 +6,26 @@
         <div class="container-categories js-container">
           <div class="books-subtitle-placeholder">
             <h3>Books</h3>
-            <div>Showing <span class="current-number-books"></span>&nbsp;of&nbsp;<span class="total-number-books"></span></div>
+            <div>
+              Showing
+              <span class="current-number-books"></span>&nbsp;of&nbsp;<span
+                class="total-number-books"
+              ></span>
+            </div>
           </div>
           <ul class="list categories js-list-categories">
-            <li class="item" data-name="top-books" tabindex="0">All categories</li>
+            <li class="item" data-name="top-books" tabindex="0">
+              All categories
+            </li>
           </ul>
         </div>
       </div>
 
-
       <div class="books-list-placeholder">
-      <ul class="list list-books js-list-books all-books-show"></ul>
-      <span class="loader"></span>
-      <button type="button" class="load-more">Load more</button>
+        <ul class="list list-books js-list-books all-books-show"></ul>
+        <span class="loader"></span>
+        <button type="button" class="load-more">Load more</button>
       </div>
     </div>
-    
   </div>
-
 </section>
