--- a/src/partials/events.html
+++ b/src/partials/events.html
@@ -9,9 +9,9 @@
 
     <div class="swiper">
       <!-- Additional required wrapper -->
-      <div class="swiper-wrapper">
+      <ul class="swiper-wrapper">
         <!-- Slides -->
-        <div class="swiper-slide events-slide">
+        <li class="swiper-slide events-slide">
           <img
             class="swiper-img"
             srcset="
@@ -34,8 +34,8 @@
               </svg>
             </button>
           </div>
-        </div>
-        <div class="swiper-slide events-slide">
+        </li>
+        <li class="swiper-slide events-slide">
           <img
             class="swiper-img"
             srcset="
@@ -58,8 +58,8 @@
               </svg>
             </button>
           </div>
-        </div>
-        <div class="swiper-slide events-slide">
+        </li>
+        <li class="swiper-slide events-slide">
           <img
             class="swiper-img"
             srcset="
@@ -82,8 +82,8 @@
               </svg>
             </button>
           </div>
-        </div>
-      </div>
+        </li>
+      </ul>
 
       <div class="feedback-nav-wrapper event-btn">
         <div class="my-swiper"></div>
