--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -57,6 +57,7 @@
   gap: 16px;
   flex-wrap: nowrap;
   justify-content: center;
+  align-items: baseline;
 }
 
 .footer-form {
@@ -80,7 +81,7 @@
   border: 1px solid #0b0500;
   border-radius: 4px;
   padding: 12px 23px;
-
+  height: 48px;
   background: transparent;
   transition: all 0.3s ease;
 
