--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -10,22 +10,22 @@
             <source
               media="(max-width: 767px)"
               srcset="
-                ../img/hero-img/b1-mob.png    1x,
-                ../img/hero-img/b1-mob@2x.png 2x
+                ./img/hero-img/b1-mob.png    1x,
+                ./img/hero-img/b1-mob@2x.png 2x
               "
             />
             <source
               media="(min-width: 1440px)"
               srcset="
-                ../img/hero-img/b1-desk.png    1x,
-                ../img/hero-img/b1-desk@2x.png 2x
+                ./img/hero-img/b1-desk.png    1x,
+                ./img/hero-img/b1-desk@2x.png 2x
               "
             />
             <source
               media="(min-width: 768px)"
               srcset="
-                ../img/hero-img/b1-tabl.png    1x,
-                ../img/hero-img/b1-tabl@2x.png 2x
+                ./img/hero-img/b1-tabl.png    1x,
+                ./img/hero-img/b1-tabl@2x.png 2x
               "
             />
 
@@ -42,8 +42,8 @@
             <source
               media="(max-width: 767px)"
               srcset="
-                ../img/hero-img/b2-mob.png    1x,
-                ../img/hero-img/b2-mob@2x.png 2x
+                ./img/hero-img/b2-mob.png    1x,
+                ./img/hero-img/b2-mob@2x.png 2x
               "
             />
             <source
@@ -56,8 +56,8 @@
             <source
               media="(min-width: 768px)"
               srcset="
-                ../img/hero-img/b2-tabl.png    1x,
-                ../img/hero-img/b2-tabl@2x.png 2x
+                ./img/hero-img/b2-tabl.png    1x,
+                ./img/hero-img/b2-tabl@2x.png 2x
               "
             />
 
@@ -80,15 +80,15 @@
             <source
               media="(min-width: 1440px)"
               srcset="
-                ../img/hero-img/b3-desk.png    1x,
-                ../img/hero-img/b3-desk@2x.png 2x
+                ./img/hero-img/b3-desk.png    1x,
+                ./img/hero-img/b3-desk@2x.png 2x
               "
             />
             <source
               media="(min-width: 768px)"
               srcset="
-                ../img/hero-img/b3-tabl.png    1x,
-                ../img/hero-img/b3-tabl@2x.png 2x
+                ./img/hero-img/b3-tabl.png    1x,
+                ./img/hero-img/b3-tabl@2x.png 2x
               "
             />
 
@@ -104,8 +104,8 @@
             <source
               media="(max-width: 767px)"
               srcset="
-                ../img/hero-img/b4-mob.png    1x,
-                ../img/hero-img/b4-mob@2x.png 2x
+                ./img/hero-img/b4-mob.png    1x,
+                ./img/hero-img/b4-mob@2x.png 2x
               "
             />
             <source
@@ -118,12 +118,12 @@
             <source
               media="(min-width: 768px)"
               srcset="
-                ../img/hero-img/b4-tabl.png    1x,
-                ../img/hero-img/b4-tabl@2x.png 2x
+                ./img/hero-img/b4-tabl.png    1x,
+                ./img/hero-img/b4-tabl@2x.png 2x
               "
             />
 
-            <img src="../img/hero-img/b4-mob.png" alt="" />
+            <img src="./img/hero-img/b4-mob.png" alt="" />
           </picture>
           <div class="hero-picture-text">
             <p class="hero-text">Last chance to buy our spring bestsellers</p>
