--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -29,7 +29,7 @@
               "
             />
 
-            <img src="../img/hero-img/b1-mob.png" alt="" />
+            <img src="./img/hero-img/b1-mob.png" alt="" />
           </picture>
 
           <div class="hero-picture-text">
@@ -49,8 +49,8 @@
             <source
               media="(min-width: 1440px)"
               srcset="
-                ../img/hero-img/b2-desk.png    1x,
-                ../img/hero-img/b2-desk@2x.png 2x
+                ./img/hero-img/b2-desk.png    1x,
+                ./img/hero-img/b2-desk@2x.png 2x
               "
             />
             <source
@@ -61,7 +61,7 @@
               "
             />
 
-            <img src="../img/hero-img/b2-mob.png" alt="" />
+            <img src="./img/hero-img/b2-mob.png" alt="" />
           </picture>
           <div class="hero-picture-text">
             <p class="hero-text">Save 15% on some books</p>
@@ -73,8 +73,8 @@
             <source
               media="(max-width: 767px)"
               srcset="
-                ../img/hero-img/b3-mob.png    1x,
-                ../img/hero-img/b3-mob@2x.png 2x
+                ./img/hero-img/b3-mob.png    1x,
+                ./img/hero-img/b3-mob@2x.png 2x
               "
             />
             <source
@@ -92,7 +92,7 @@
               "
             />
 
-            <img src="../img/hero-img/b3-mob.png" alt="" />
+            <img src="./img/hero-img/b3-mob.png" alt="" />
           </picture>
           <div class="hero-picture-text">
             <p class="hero-text">Summer Sale! Up to -40% discounts</p>
@@ -111,8 +111,8 @@
             <source
               media="(min-width: 1440px)"
               srcset="
-                ../img/hero-img/b4-desk.png    1x,
-                ../img/hero-img/b4-desk@2x.png 2x
+                ./img/hero-img/b4-desk.png    1x,
+                ./img/hero-img/b4-desk@2x.png 2x
               "
             />
             <source
