--- a/src/partials/feedbacks.html
+++ b/src/partials/feedbacks.html
@@ -69,7 +69,7 @@
           <div class="name-wrapper">
             <img
               srcset="
-                /img/feedbacks/micahel.png    1x,
+                /img/feedbacks/michael.png    1x,
                 /img/feedbacks/michael@2x.png 2x
               "
               alt="Michael"
