--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -6,7 +6,7 @@
       <ul class="swiper-wrapper">
         <!-- Slides -->
         <li class="swiper-slide hero">
-          <picture>
+          <picture class="hero-images">
             <source
               media="(max-width: 767px)"
               srcset="
@@ -30,15 +30,15 @@
             />
 
             <img src="./img/hero-img/b1-mob.png" alt="" />
-          </picture>
 
-          <div class="hero-picture-text">
-            <p class="hero-text">Get 10% off your first order</p>
-            <a href="#books" class="hero-btn" type="button">Shop Now!</a>
-          </div>
+            <div class="hero-picture-text">
+              <p class="hero-text">Get 10% off your first order</p>
+              <a href="#books" class="hero-btn" type="button">Shop Now!</a>
+            </div>
+          </picture>
         </li>
         <li class="swiper-slide hero">
-          <picture>
+          <picture class="hero-images">
             <source
               media="(max-width: 767px)"
               srcset="
@@ -62,14 +62,14 @@
             />
 
             <img src="./img/hero-img/b2-mob.png" alt="" />
+            <div class="hero-picture-text">
+              <p class="hero-text">Save 15% on some books</p>
+              <a href="#books" class="hero-btn" type="button">Shop Now!</a>
+            </div>
           </picture>
-          <div class="hero-picture-text">
-            <p class="hero-text">Save 15% on some books</p>
-            <a href="#books" class="hero-btn" type="button">Shop Now!</a>
-          </div>
         </li>
         <li class="swiper-slide hero">
-          <picture>
+          <picture class="hero-images">
             <source
               media="(max-width: 767px)"
               srcset="
@@ -93,14 +93,14 @@
             />
 
             <img src="./img/hero-img/b3-mob.png" alt="" />
+            <div class="hero-picture-text">
+              <p class="hero-text">Summer Sale! Up to -40% discounts</p>
+              <a href="#books" class="hero-btn" type="button">Shop Now!</a>
+            </div>
           </picture>
-          <div class="hero-picture-text">
-            <p class="hero-text">Summer Sale! Up to -40% discounts</p>
-            <a href="#books" class="hero-btn" type="button">Shop Now!</a>
-          </div>
         </li>
         <li class="swiper-slide hero">
-          <picture>
+          <picture class="hero-images">
             <source
               media="(max-width: 767px)"
               srcset="
@@ -124,11 +124,11 @@
             />
 
             <img src="./img/hero-img/b4-mob.png" alt="" />
+            <div class="hero-picture-text">
+              <p class="hero-text">Last chance to buy our spring bestsellers</p>
+              <a href="#books" class="hero-btn" type="button">Shop Now!</a>
+            </div>
           </picture>
-          <div class="hero-picture-text">
-            <p class="hero-text">Last chance to buy our spring bestsellers</p>
-            <a href="#books" class="hero-btn" type="button">Shop Now!</a>
-          </div>
         </li>
       </ul>
       <div class="hero-title-wrap">
