--- a/src/css/books.css
+++ b/src/css/books.css
@@ -88,6 +88,7 @@
 .books .container .books-wrapper .list-books .book-info {
     position: relative;
     width: 100%;
+    min-height: 345px;
 }
 
 
@@ -127,6 +128,7 @@
     max-width: 335px;
     width: 100%;
     max-height: 485px;
+    min-height: 256px;
     overflow: hidden;
     border-radius: 8px;
 }
