--- a/src/partials/contact-modal.html
+++ b/src/partials/contact-modal.html
@@ -1,10 +1,10 @@
 <div class="container">
-  <div id="modal" class="modal">
-    <div class="modal-content">
+  <div id="contact-modal" class="contact-modal">
+    <div class="contact-modal-content">
       <span class="close-btn" id="closeModalBtn">&times;</span>
       <h2 class="contact-modal-title">Register</h2>
       <p class="contact-modal-text">Cozy Book Club – “The Midnight Library”</p>
-      <form class="modal-form">
+      <form class="contact-modal-form">
         <label for="name">Name*</label>
         <input type="text" id="name" placeholder="Ann" required />
 
@@ -18,12 +18,14 @@
 
         <label for="message">Message</label>
         <textarea
-          class="modal-textarea"
+          class="contact-modal-textarea"
           id="message"
           placeholder="Type your message..."
         ></textarea>
 
-        <button type="submit" class="register-btn">Register</button>
+        <button type="submit" class="contact-modal-register-btn">
+          Register
+        </button>
       </form>
     </div>
   </div>
