--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,38 +1,120 @@
-<section class="hero">
-  <div class="container hero-container">
-    <div class="swiper hero-swiper">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide slide1">
-          <h3 class="hero-text hero-text1">Get 10% off your first order</h3>
-          <button class="hero-btn">Shop Now!</button>
-        </div>
-        <div class="swiper-slide slide2">
-          <h3 class="hero-text hero-text2">Save 15% on some books</h3>
-          <button class="hero-btn">Shop Now!</button>
-        </div>
-        <div class="swiper-slide slide3">
-          <h3 class="hero-text hero-text3">Summer Sale!<span>Up to -40% discounts</span></h3>
-          <button class="hero-btn">Shop Now!</button>
-        </div>
-        <div class="swiper-slide slide4">
-          <h3 class="hero-text hero-text4">Last chance to buy our <span>spring bestsellers</span></h3>
-          <button class="hero-btn">Shop Now!</button>
-        </div>
-      </div>
-    </div>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script src="./js/feedback.js"></script> 
 
-    <div class="swiper-btn-container">
-      <h1 class="hero-title">Discover Your Next Great Read Today!</h1>
-      <!-- buttons -->
-      <div class="swiper-btn-prev">
-        <svg class="hero-svg" width="24" height="24">
-          <use href="./img/hero-img/icon-hero.svg#icon-left"></use>
-        </svg>
-      </div>
-      <div class="swiper-btn-next">
-        <svg class="hero-svg" width="24" height="24">
-          <use href="./img/hero-img/icon-hero.svg#icon-rigth"></use>
-        </svg>
+
+
+<section class="hero-section">
+  <div class="container">
+    <!-- Slider main container -->
+    <div class="swiper">
+      <!-- Additional required wrapper -->
+      <ul class="swiper-wrapper">
+        <!-- Slides -->
+        <li class="swiper-slide hero">
+          <picture class="hero-images">
+            <source media="(max-width: 767px)" srcset="
+                ./img/hero-img/b1-mob.png    1x,
+                ./img/hero-img/b1-mob@2x.png 2x
+              " />
+            <source media="(min-width: 1440px)" srcset="
+                ./img/hero-img/b1-desk.png    1x,
+                ./img/hero-img/b1-desk@2x.png 2x
+              " />
+            <source media="(min-width: 768px)" srcset="
+                ./img/hero-img/b1-tabl.png    1x,
+                ./img/hero-img/b1-tabl@2x.png 2x
+              " />
+
+            <img src="./img/hero-img/b1-mob.png" alt="" />
+
+            <div class="hero-picture-text">
+              <p class="hero-text">Get 10% off your first order</p>
+              <a href="#books" class="hero-btn" type="button">Shop Now!</a>
+            </div>
+          </picture>
+        </li>
+        <li class="swiper-slide hero">
+          <picture class="hero-images">
+            <source media="(max-width: 767px)" srcset="
+                ./img/hero-img/b2-mob.png    1x,
+                ./img/hero-img/b2-mob@2x.png 2x
+              " />
+            <source media="(min-width: 1440px)" srcset="
+                ./img/hero-img/b2-desk.png    1x,
+                ./img/hero-img/b2-desk@2x.png 2x
+              " />
+            <source media="(min-width: 768px)" srcset="
+                ./img/hero-img/b2-tabl.png    1x,
+                ./img/hero-img/b2-tabl@2x.png 2x
+              " />
+
+            <img src="./img/hero-img/b2-mob.png" alt="" />
+            <div class="hero-picture-text">
+              <p class="hero-text">Save 15% on some books</p>
+              <a href="#books" class="hero-btn" type="button">Shop Now!</a>
+            </div>
+          </picture>
+        </li>
+        <li class="swiper-slide hero">
+          <picture class="hero-images">
+            <source media="(max-width: 767px)" srcset="
+                ./img/hero-img/b3-mob.png    1x,
+                ./img/hero-img/b3-mob@2x.png 2x
+              " />
+            <source media="(min-width: 1440px)" srcset="
+                ./img/hero-img/b3-desk.png    1x,
+                ./img/hero-img/b3-desk@2x.png 2x
+              " />
+            <source media="(min-width: 768px)" srcset="
+                ./img/hero-img/b3-tabl.png    1x,
+                ./img/hero-img/b3-tabl@2x.png 2x
+              " />
+
+            <img src="./img/hero-img/b3-mob.png" alt="" />
+            <div class="hero-picture-text">
+              <p class="hero-text">Summer Sale! Up to -40% discounts</p>
+              <a href="#books" class="hero-btn" type="button">Shop Now!</a>
+            </div>
+          </picture>
+        </li>
+        <li class="swiper-slide hero">
+          <picture class="hero-images">
+            <source media="(max-width: 767px)" srcset="
+                ./img/hero-img/b4-mob.png    1x,
+                ./img/hero-img/b4-mob@2x.png 2x
+              " />
+            <source media="(min-width: 1440px)" srcset="
+                ./img/hero-img/b4-desk.png    1x,
+                ./img/hero-img/b4-desk@2x.png 2x
+              " />
+            <source media="(min-width: 768px)" srcset="
+                ./img/hero-img/b4-tabl.png    1x,
+                ./img/hero-img/b4-tabl@2x.png 2x
+              " />
+
+            <img src="./img/hero-img/b4-mob.png" alt="" />
+            <div class="hero-picture-text">
+              <p class="hero-text">Last chance to buy our spring bestsellers</p>
+              <a href="#books" class="hero-btn" type="button">Shop Now!</a>
+            </div>
+          </picture>
+        </li>
+      </ul>
+      <div class="hero-title-wrap">
+        <h1 class="hero-title">Discover Your Next Great Read Today!</h1>
+        <div class="hero-nav-wrapper hero-scroll-wrap">
+          <div class="swiper-button-prev scroll-btn hero-scroll">
+            <svg class="arrow-nav" width="24" height="24">
+              <use href="/img/symbol-defs.svg#icon-left-arrow-alt"></use>
+            </svg>
+          </div>
+          <div class="swiper-button-next scroll-btn hero-scroll">
+            <svg class="arrow-nav" width="24" height="24">
+              <use href="/img/symbol-defs.svg#icon-right-arrow-alt"></use>
+            </svg>
+          </div>
+        </div>
       </div>
     </div>
   </div>
