--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -26,8 +26,9 @@ a {
 button {
   cursor: pointer;
   padding: 0;
-  border: 0;
-}
+  border: 0; 
+  background-color: transparent; }
+
 
 img {
   display: block;
