--- a/src/css/header.css
+++ b/src/css/header.css
@@ -18,12 +18,16 @@
     }
 }
 .header-nav-item{
+    transition: all 0.3s ease;
     margin:24px 0;
     font-family: "Rubik", sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     }
+.header-nav-item:hover{
+opacity: 0.2;
+}
 
 .logo-header{
     display: flex;
@@ -40,10 +44,7 @@ z-index: 1001;     }
  .nav-modal {background-color: #fceee6;
 display: none;
 position: fixed;
-top: 0;
-right: 0;
-width: 100%;
-height: 100vh;
+inset: 0;
 z-index: 1000;
 
 }
