--- a/src/partials/events.html
+++ b/src/partials/events.html
@@ -1,4 +1,4 @@
-<section class="events-section">
+<section class="events-section" id="events">
   <div class="container">
     <div class="location-title">Events</div>
     <h2 class="events-heading">Upcoming Events at Booksy</h2>
