--- a/src/partials/feedbacks.html
+++ b/src/partials/feedbacks.html
@@ -1,4 +1,4 @@
-<section class="feedbacks-section">
+<section class="feedbacks-section" id="feedbacks">
   <div class="container">
     <h2 class="feedback-title">Customer Feedbacks</h2>
     <p class="feedback-text section-text">
