--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,11 +13,11 @@
       </svg>
     </button>
     <ul class="header-nav-list">
-      <li class="header-nav-item"><a  href="#">Home</a></li>
-      <li class="header-nav-item"><a  href="#">Books</a></li>
-      <li class="header-nav-item"><a  href="#">Feedbacks</a></li>
-      <li class="header-nav-item"><a  href="#">Events</a></li>
-      <li class="header-nav-item"><a  href="#">Location</a></li>
+      <li class="header-nav-item"><a  href="/src/index.html">Home</a></li>
+      <li class="header-nav-item"><a  href="#books">Books</a></li>
+      <li class="header-nav-item"><a  href="#feedbacks">Feedbacks</a></li>
+      <li class="header-nav-item"><a  href="#events">Events</a></li>
+      <li class="header-nav-item"><a  href="#location">Location</a></li>
     </ul>
     <div class="nav-modal" id="navModal" >
       <nav>
@@ -38,11 +38,11 @@
       </div>
 <div class="nav-modal-list-conteiner">
              <ul class="nav-list">
-          <li class="nav-modal-item"><a  href="#">Home</a></li>
-          <li class="nav-modal-item"><a  href="#">Books</a></li>
-          <li class="nav-modal-item"><a  href="#">Feedbaks</a></li>
-          <li class="nav-modal-item"><a  href="#">Events</a></li>
-          <li class="nav-modal-item"><a  href="#">Contact</a></li>
+          <li class="nav-modal-item"><a  href="/src/index.html" data-link="/src/index.html">Home</a></li>
+          <li class="nav-modal-item"><a href="#" data-link="/src/partials/books.html#books">Books</a></li>
+          <li class="nav-modal-item"><a  href="#" data-link="/src/partials/feedbacks.html#feedbacks">Feedbacks</a></li>
+          <li class="nav-modal-item"><a  href="#" data-link="/src/partials/events.html#events">Events</a></li>
+          <li class="nav-modal-item"><a  href="#" data-link="/src/partials/location.html#location">Contact</a></li>
         </ul>
       </div>
    
