--- a/src/partials/location.html
+++ b/src/partials/location.html
@@ -1,4 +1,4 @@
-<section class="location-section">
+<section class="location-section" id="location">
   <div class="container">
     <div class="location-block">
       <div class="location-text">
