--- a/src/css/books.css
+++ b/src/css/books.css
@@ -10,7 +10,7 @@
     border: 1px solid #0b0500;
         border-radius: 4px;
         padding: 8px 20px;
-        width: 227px;
+        width: 100%;
         height: 40px;
         font-family: "Rubik", sans-serif;
             font-weight: 400;
@@ -125,6 +125,10 @@
     min-height: 256px;
     overflow: hidden;
     border-radius: 8px;
+}
+
+.books .container .books-wrapper .list-books .book-info .book-cover img {
+    width: 100%;
 }
 
 @media screen and (min-width: 768px) {
